--- a/xsmb/index.html
+++ b/xsmb/index.html
@@ -31,7 +31,7 @@
                                 <i class="fas fa-fax"></i>
                                </div>
                                <div class="col-8" style="font-size: 25px;">
-                                XỔ SỐ TRUYỀN THỐNG 
+                                XỔ SỐ TRUYỀN THỐNGG 
                                </div>
                                <div class="col-2">
                                 <i class="fas fa-volume-up"></i>
