--- a/xsmb/index.html
+++ b/xsmb/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="menu">
             <ul>
-                <li><a href="">Miền Bắc </a></li>
+                <li><a href="">Miền Bắc tuyen dz </a></li>
                 <li><a href="">Miền Trung</a></li>
                 <li><a href="">Miền Nam </a></li>
             </ul>
